feat: WebAPI形式でドメイン指定でMerchant指定&検索のプロトタイプを実装。
